[gd_scene load_steps=3 format=3 uid="uid://bu6aptssesab"]

[ext_resource type="Script" path="res://addons/picky-pixels/ui/color_palette/color_picker.gd" id="1_pbdti"]
[ext_resource type="PackedScene" uid="uid://cfvldxh3elegp" path="res://addons/picky-pixels/ui/color_palette/copy_confirm_panel.tscn" id="2_ughso"]

[node name="ColorPicker" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_pbdti")

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true
edit_alpha = false

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "0"
horizontal_alignment = 1

[node name="CopyConfirmPanel" parent="." instance=ExtResource("2_ughso")]
visible = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="CopyConfirmPanel" to="." method="_on_copy_confirm_panel_pressed"]
